fixed wrong font

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2,7 +2,7 @@
 
 :root {
   --roundness: .25rem;
-  --font: "Rubik";
+  --font: "Roboto Mono";
 }
 
 ::placeholder {
